# ct_string

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: ct_string-config.cmake
include/CT/: String.hpp
src/: String.cpp
tests/: CMakeLists.txt  String.cpp
tests/install/: .clang-tidy  CMakeLists.txt  main.cpp
